# GirlsCodeLincoln

./: .gitignore  README.md
AutomateTheBoringStuff/: README.md
AutomateTheBoringStuff/Lesson 02 - Flow Control/: number_guessing_game.py  rock_paper_scissors.py
AutomateTheBoringStuff/Lesson 03 - Functions/: input_validation.py
AutomateTheBoringStuff/Lesson 03 - Lists/: README.md
AutomateTheBoringStuff/Lesson 04 - Lists/: README.md  character_picture_grid.py  coin_flip_streaks.py  comma_code.py  magic_eight_ball.py
AutomateTheBoringStuff/Lesson 05 - Dictionaries and Structuring Data/: chess_dictionary_validator.py
AutomateTheBoringStuff/Lesson 06 - Manipulating Strings/: palindrome_checker.py  password_generator.py  table_printer.py  text_analyzer.py  word_guesser.py
AutomateTheBoringStuff/Lesson 07 - Pattern Matching with Regular Expressions/: date_detection.py  strong_password_detection.py
AutomateTheBoringStuff/Lesson 08 - Input Validation/: README.md  sandwich_maker.py  write_your_own_multiplication_quiz.py
AutomateTheBoringStuff/Lesson 08 - Reading and Writing Files/: README.md
AutomateTheBoringStuff/Lesson 09 - Reading and Writing Files/: mad_libs.py  regex_file_search.py
AutomateTheBoringStuff/Lesson 12 - Web Scraping/: README.md
Sept 25, 2022/: Untitled project (1).hex  Untitled project (2).hex  Untitled project (3).hex  Untitled project.hex  alarm (1).hex  alarm.hex  compass_west (1).hex  compass_west (2).hex  compass_west.hex
Spring 2024/: README.md
Spring 2024/Lesson 01 - Control Flow/: README.md  pyproject.toml  rock_paper_scissors.py
(+70 files in other folders)
