[tool.poetry]
name = "lesson 01 - control flow"
version = "1.0"
description = "This is a simple rock/paper/scissors game"
authors = ["Josh Loecker <joshloecker@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
